--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@solana/web3.js": "^1.95.2",
-
     "axios": "^1.7.2",
-
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
