--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@solana/web3.js": "^1.95.2",
-
     "axios": "^1.7.2",
-
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
